--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,6 +2,7 @@
 @import "base/_global";
 @import "base/_variables.css";
 @import "base/_mixins.css";
-@import "modules/_large-hero";
-@import "modules/_btn";
+@import "modules/_large-hero.css";
+@import "modules/_btn.css";
+@import "modules/_wrapper.css";
 
