--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -6,7 +6,9 @@
 	&--gutters {
 		margin-right: -65px;
 	}
+
 	@mixin atMedium{
+		
 		&__medium--4{
 		float:left;
 		width:33.33% ;
@@ -18,6 +20,13 @@
 		}
 	}
 	
+	&__medium--4--larger{
+		width:37% ;
+	}
+
+	&__medium--8--smaller{
+		width: 63%;
+	}
 
 	&--gutters > div{
 		padding-right: 65px;
