Part II On branch WebSession8 modified:   app/assets/styles/base/_global.css new file:   app/assets/styles/modules/_generic-content-container.css modified:   app/assets/styles/modules/_headline.css modified:   app/assets/styles/modules/_row.css modified:   app/assets/styles/styles.css modified:   app/index.html modified:   app/temp/styles/styles.css

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,6 +1,5 @@
 .row{
 	
-	background-color: yellow;
 	@mixin clearfix;
 	
 	&--gutters {
@@ -8,6 +7,10 @@
 	}
 
 	@mixin atMedium{
+		
+		&__b-margin-until-medium{
+			margin-bottom: 0rem;
+		}
 		
 		&__medium--4{
 		float:left;
@@ -30,5 +33,9 @@
 
 	&--gutters > div{
 		padding-right: 65px;
+	}
+
+	&__b-margin-until-medium {
+		margin-bottom: 1rem;
 	}
 }
