--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -5,6 +5,13 @@
 	&--gutters {
 		margin-right: -65px;
 	}
+	&--gutters-large {
+		margin-right: -100px;
+	}
+	&__medium-6{
+		float:left;
+		width: 50%;
+	}
 
 	@mixin atMedium{
 		
@@ -12,27 +19,31 @@
 			margin-bottom: 0rem;
 		}
 		
-		&__medium--4{
+		&__medium-4{
 		float:left;
 		width:33.33% ;
 		}
 
-		&__medium--8{
+		&__medium-8{
 			float: left;
 			width: 66.66%;
 		}
 	}
 	
-	&__medium--4--larger{
+	&__medium-4--larger{
 		width:37% ;
 	}
 
-	&__medium--8--smaller{
+	&__medium-8--smaller{
 		width: 63%;
 	}
 
 	&--gutters > div{
 		padding-right: 65px;
+	}
+
+	&--gutters-large > div{
+		padding-right: 100px;
 	}
 
 	&__b-margin-until-medium {
