--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -1,12 +1,16 @@
 .section-title {
 	font-size:2.25rem;
 	font-weight:300;
+	text-align: center;
 
 	@mixin atSmall{
 		font-size:3.75rem;
 	}
 	strong{
 		font-weight: 500;
+	}
+	&--blue{
+		color:$mainBlue;
 	}
 
 	&__icon{
@@ -16,6 +20,8 @@
 		display: block;
 
 		@mixin atSmall{
+			position: relative;
+			top: 8px;
 			margin-right: .5rem;
 			margin-left: 0;
 			margin-bottom: 0;
