Part II On branch WebSession11 modified:   app/assets/styles/modules/_page-section.css modified:   app/assets/styles/modules/_row.css modified:   app/assets/styles/modules/_testimonials.css modified:   app/assets/styles/modules/_wrapper.css modified:   app/index.html modified:   app/temp/styles/styles.css

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -45,8 +45,29 @@
 	&--gutters-large > div{
 		padding-right: 100px;
 	}
+	&--gutters-small {
+		margin-right: -45px;
+	}
 
+	&--gutters-small > div {
+		margin-right: -45px;
+	}
 	&__b-margin-until-medium {
 		margin-bottom: 1rem;
+	}
+
+	&--t-padding{
+		padding-top: 80px;
+	}
+
+	/* Begin Equal Height Rules*/
+	&--equal-height{
+		@mixin atMedium{
+			display: flex;
+		}
+		& > div{
+			float:none;
+			display: flex;
+		}
 	}
 }
