--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -11,7 +11,19 @@
 	}
 
 	&--testimonials{
+		background-color: #e0e6ef
+		@mixin atMedium{
 		background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
-		background-size: cover;
+		background-size: cover;			
+		}
+
+	}
+
+	&--no-b-until-medium {
+		padding-bottom: 0;
+		
+		@mixin atMedium{
+			padding-bottom: 4.5em;
+		}
 	}
 }
