--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -1,8 +1,15 @@
+/*Testing */
+
 {{#shapes}}
+	{{#first}}
+	.icon{
+		background-image:url('/assets/images/sprites/{{{sprite}}}');
+	}
+	{{/first}}
 .icon--{{base}} {
 	width: {{width.outer}}px;
 	height:{{height.outer}}px;
-	background-image:url('/temp/sprite/css/{{{sprite}}}');
-	background-positon:{{position.relative.xy}};
+
+	background-position:{{position.relative.xy}};
 }
 {{/shapes}}
