User span instead icon On branch WebSession12 modified:   app/assets/styles/modules/_section-title.css modified:   app/index.html modified:   app/temp/styles/styles.css

--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -13,12 +13,13 @@
 		color:$mainBlue;
 	}
 
-	&__icon{
+	&__icon {
 		margin-left: auto;
 		margin-right: auto;
 		margin-bottom: auto;
 		display: block;
-
+		position: absolute; 
+		
 		@mixin atSmall{
 			position: relative;
 			top: 8px;
