can not fix section-title__icon
On branch WebSession12
modified:   app/assets/styles/base/_mixins.css
modified:   app/assets/styles/modules/_page-section.css
modified:   app/temp/styles/styles.css

--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -26,4 +26,11 @@
 			padding-bottom: 4.5em;
 		}
 	}
+	&--no-b-until-large {
+		padding-bottom: 0;
+		
+		@mixin atLarge{
+			padding-bottom: 4.5em;
+		}
+	}
 }
