--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,20 +3,40 @@
 	position: absolute;  
 	width:100%;
 	z-index: 2;
-	background-color: rgba(47,85,114,.3);
+
+	@mixin atMedium{}
+		background-color: rgba(47,85,114,.3);
+	}
 
 	&__btn-container{
 		float: right;
 	}
 
 	&__logo{
+		position: absolute;
 		top:0;
+		left:50%;
 		position: absolute;
 		background-color: $mainBlue;
 		padding: 25px 36px;
+		transform: translateX(-50%) scale(.8);
+		transform-origin: 50% 50%;
+
+		@mixin atMedium{
+			left:auto;
+			transform: translateX(0);
+		}
 	}
 
 	&__logo__graphic {
 		text-indent: -9999px;
+	}
+
+	&__menu_content {
+		display: none;
+
+		@mixin atMedium{
+			display:block;
+		}
 	}
 }
