--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,36 +1,38 @@
-.page-section{
-	padding: 1.2rem 0;
+.page-section {
+  padding: 1.2rem 0;
 
-	@mixin atMedium{
-		padding: 4.5rem 0;
-	}
+  @mixin atMedium {
+    padding: 4.5rem 0;
+  }
+  
+  &--no-b-padding-until-medium {
+    padding-bottom: 0;
 
-	&--blue{
-		background-color: $mainBlue;
-		color:#FFF;
-	}
+    @mixin atMedium {
+      padding-bottom: 4.5rem;
+    }
+  }
 
-	&--testimonials{
-		background-color: #e0e6ef;
-		@mixin atMedium{
-		background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
-		background-size: cover;			
-		}
+  &--no-b-padding-until-large {
+    padding-bottom: 0;
 
-	}
+    @mixin atLarge {
+      padding-bottom: 4.5rem;
+    }
+  }
 
-	&--no-b-until-medium {
-		padding-bottom: 0;
-		
-		@mixin atMedium{
-			padding-bottom: 4.5em;
-		}
-	}
-	&--no-b-until-large {
-		padding-bottom: 0;
-		
-		@mixin atLarge{
-			padding-bottom: 4.5em;
-		}
-	}
+  &--blue {
+    background-color: $mainBlue;
+    color: #FFF;
+  }
+
+  &--testimonials {
+    background-color: #e0e6ef;
+
+    @mixin atLarge {
+      background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+      background-size: cover;
+    }
+  }
+
 }
