--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,25 +1,27 @@
-.primary-nav{
+.primary-nav {
 
-	&--pull-right {
-		float:right;
-	}
 
-	ul{
-		margin:0;
-		padding: 0;
-		@mixin clearfix;
-	}
+  &--pull-right {
+    float: right;
+  }
 
-	li{
-		list-style: none;
-		float:left;
-		padding-right: 20px;
-	}
+  ul {
+    margin: 0;
+    padding: 0;
+    @mixin clearfix;
+  }
 
-	a{
-		color:#FFF;
-		text-decoration: none;
-		font-weight: 300;
-		padding: 12px 0;
-	}
+  li {
+    list-style: none;
+    float: left;
+    padding-right: 20px;
+  }
+
+  a {
+    color: #FFF;
+    font-weight: 300;
+    text-decoration: none;
+    display: block;
+    padding: 12px 0;
+  }
 }
