--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,13 +3,21 @@
   position: absolute;
   width: 100%;
   z-index: 2;
-  
+  transition: background-color .3s ease-out;
+
+  &--is-expanded {
+    background-color: rgba($mainBlue,.55);
+  }
+
   @mixin atMedium {
     background-color: rgba($mainBlue, .3);
   }
 
   &__btn-container {
-    float: right;
+    @mixin atMedium {
+      float: right;
+    }
+    
   }
 
   &__logo {
@@ -34,6 +42,7 @@
   &__menu-icon {
     width: 20px;
     height: 20px;
+    z-index: 10;
     background-color: #FFF;
     position: absolute;
     top: 10px;
@@ -45,14 +54,24 @@
   }
 
   &__menu-content {
-    display: none;
+    opacity:0; 
+    transform: scale(1.2);
+    transition: all .3s ease-out; 
+    position: relative;
+    z-index: -10;
+    padding-top:90px; 
+    text-align: center;
 
     @mixin atMedium {
-      display: block;
+      opacity: 1;
+      z-index: 1;
+      padding-top:0;
+      transform: scale(1);
     }
 
     &--is-visible{
-      display: block;
+      opacity: 1;
+      z-index: 1;
     }
   }
 }
