--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -41,12 +41,45 @@
 
   &__menu-icon {
     width: 20px;
-    height: 20px;
+    height: 19px;
     z-index: 10;
-    background-color: #FFF;
     position: absolute;
     top: 10px;
     right: 10px;
+    
+    &__top {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      top: 0;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #FFF;
+    }
+
+      &__middle {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      top: 8px;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #FFF;
+    }
+
+      &__bottom {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      bottom: 0;
+      left: 0;
+      width: 20px;
+      height: 3px;
+      background-color: #FFF;
+    }
+
 
     @mixin atMedium {
       display: none;
