--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -47,7 +47,8 @@
     top: 10px;
     right: 10px;
     
-    &__top {
+    &::before {
+      content: "";
       position: absolute;
       width: 20px;
       height: 20px;
@@ -56,6 +57,8 @@
       width: 20px;
       height: 3px;
       background-color: #FFF;
+      transform-origin: 0 0;
+      transition: transform .3s ease-out;
     }
 
       &__middle {
@@ -67,9 +70,12 @@
       width: 20px;
       height: 3px;
       background-color: #FFF;
+      transition: all .3s ease-out;
+      transform-origin: 0 50%;
     }
 
-      &__bottom {
+      &::after {
+      content:"";
       position: absolute;
       width: 20px;
       height: 20px;
@@ -78,11 +84,28 @@
       width: 20px;
       height: 3px;
       background-color: #FFF;
+      transform-origin: 0 100%;
+      transition: transform .3s ease-out;
     }
 
 
     @mixin atMedium {
       display: none;
+    }
+  }
+  
+  &__menu-icon--close-x{
+    &::before {
+      transform:rotate(45deg) scaleX(1.25);
+    }
+    
+    .site-header__menu-icon__middle{
+      opacity: 0;
+      transform: scaleX(0);
+    }
+
+    &::after{
+      transform:rotate(-45deg) scaleX(1.25) translateY(1px);
     }
   }
 
