--- a/app/assets/styles/modules/_reveal-item.css
+++ b/app/assets/styles/modules/_reveal-item.css
@@ -1,8 +1,8 @@
-.reveal_item{
-	opacity:0;
-	transition: opacity 1.5s ease-out;
+.reveal-item {
+  opacity: 0;
+  transition: opacity 1.5s ease-out;
 
-	&--is-visible{
-		opacity: 1;
-	}
+  &--is-visible {
+    opacity: 1;
+  }
 }
