--- a/app/assets/styles/modules/_modal.css
+++ b/app/assets/styles/modules/_modal.css
@@ -8,7 +8,15 @@
 	right: 0;
 	opacity:0;
 	visibility: hidden;
+	transform: scale(1.2);
+	transition: all .3s ease-out;
 	
+	&--is-visible{
+		opacity: 1;
+		visibility: visible;
+		transform: scale(1);
+	}
+
 	&__description {
 		text-align: center;
 		font-size: 1.3rem;
