Install gulp package svg2png Learn how to generate png install modernizr package to generate no-svg for older browser Goog lession On branch WebSession19-browser-support new file:   app/assets/images/sprites/sprite-d675eadb modified:   app/assets/scripts/Vendor.js modified:   app/temp/scripts/Vendor.js new file:   app/temp/scripts/modernizr.js new file:   gulp/tasks/modernizr.js modified:   gulp/tasks/scripts.js modified:   gulp/tasks/sprites.js modified:   gulp/templates/sprite.css modified:   gulpfile.js modified:   package.json

--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -5,6 +5,10 @@
 	.icon{
 		background-image:url('/assets/images/sprites/{{{sprite}}}');
 	}
+
+	.no-svg .icon{
+		background-image:url('/assets/images/sprints/{{{sprite}}}');
+	}
 	{{/first}}
 .icon--{{base}} {
 	width: {{width.outer}}px;
