--- a/app/assets/styles/modules/_sprite.css
+++ b/app/assets/styles/modules/_sprite.css
@@ -1,7 +1,11 @@
-/*Testing */
+/* Do not edit modules/_sprite directly  */
 
 	.icon{
 		background-image:url('/assets/images/sprites/sprite-d675eadb.svg');
+	}
+
+	.no-svg .icon{
+		background-image:url('/assets/images/sprites/sprite-d675eadb.png');
 	}
 .icon--clear-view-escapes {
 	width: 142.4px;
