--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -1,4 +1,4 @@
-/*Testing */
+/* Do not edit modules/_sprite directly  */
 
 {{#shapes}}
 	{{#first}}
@@ -7,7 +7,7 @@
 	}
 
 	.no-svg .icon{
-		background-image:url('/assets/images/sprints/{{{sprite}}}');
+		background-image:url('/assets/images/sprites/{{#replaceSvgWithPng}}{{{sprite}}}{{/replaceSvgWithPng}}');
 	}
 	{{/first}}
 .icon--{{base}} {
