--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -96,8 +96,8 @@
 
   }
   
-  /* Begin Equal Height Rules */
-  &--equal-height-at-medium {
+  /* Begin Equal Height Rules add flexbox for older browsers*/
+  .flexbox &--equal-height-at-medium {
     @mixin atMedium {
       display: flex;
     }
@@ -109,7 +109,7 @@
 
   }
 
-  &--equal-height-at-large {
+  .flexbox &--equal-height-at-large {
     @mixin atLarge {
       display: flex;
     }
